Add components of top-navigation.

--- a/partial/top-nav.html
+++ b/partial/top-nav.html
@@ -11,22 +11,10 @@
     <!-- /.navbar-header -->
 
     <ul class="nav navbar-top-links navbar-right">
-        <li class="dropdown">
-            <sb-top-nav-messages />
-        </li>
-        <!-- /.dropdown -->
-        <li class="dropdown">
-            <sb-top-nav-tasks />
-        </li>
-        <!-- /.dropdown -->
-        <li class="dropdown">
-            <sb-top-nav-alerts />
-        </li>
-        <!-- /.dropdown -->
-        <li class="dropdown">
-            <sb-top-nav-user>
-        </li>
-        <!-- /.dropdown -->
+        <sb-top-nav-messages></sb-top-nav-messages>
+        <sb-top-nav-tasks></sb-top-nav-tasks>
+        <sb-top-nav-alerts></sb-top-nav-alerts>
+        <sb-top-nav-user></sb-top-nav-user>
     </ul>
     <!-- /.navbar-top-links -->
 </nav>
