Add directive of metisMenu.

--- a/partial/sidebar.html
+++ b/partial/sidebar.html
@@ -1,7 +1,7 @@
 <div data-spy="affix" data-offset-top="0" data-offset-bottom="200">
     <nav class="navbar-default navbar-static-side" role="navigation">
         <div class="sidebar-collapse">
-            <ul class="nav" id="side-menu">
+            <ul class="nav" id="side-menu" sb-metis-menu>
                 <li class="sidebar-search">
                     <div class="input-group custom-search-form">
                         <input type="text" class="form-control" placeholder="Search...">
