Add sidebar-search directive.

--- a/partial/sidebar.html
+++ b/partial/sidebar.html
@@ -3,15 +3,7 @@
         <div class="sidebar-collapse">
             <ul class="nav" id="side-menu" sb-metis-menu>
                 <li class="sidebar-search">
-                    <div class="input-group custom-search-form">
-                        <input type="text" class="form-control" placeholder="Search...">
-                        <span class="input-group-btn">
-                            <button class="btn btn-default" type="button">
-                                <i class="fa fa-search"></i>
-                            </button>
-                        </span>
-                    </div>
-                    <!-- /input-group -->
+                    <sb-sidebar-search></sb-sidebar-search>
                 </li>
                 <li>
                     <a href="index.html"><i class="fa fa-dashboard fa-fw"></i> Dashboard</a>
