Override default datatable style.

--- a/css/sb-admin.css
+++ b/css/sb-admin.css
@@ -242,6 +242,14 @@ body {
 
 /* DataTables Overrides */
 
+table.table thead .sorting,
+table.table thead .sorting_asc,
+table.table thead .sorting_desc,
+table.table thead .sorting_asc_disabled,
+table.table thead .sorting_desc_disabled {
+    background-image: none;
+}
+
 table.dataTable thead .sorting,
 table.dataTable thead .sorting_asc:after,
 table.dataTable thead .sorting_desc,
