--- a/partial/tables.html
+++ b/partial/tables.html
@@ -14,7 +14,7 @@
 <!-- /.panel-heading -->
 <div class="panel-body">
 <div class="table-responsive">
-<table class="table table-striped table-bordered table-hover" id="dataTables-example">
+<table class="table table-striped table-bordered table-hover" id="dataTables-example" sb-datatables>
 <thead>
 <tr>
     <th>Rendering engine</th>
