Add flot examples, part 1.

--- a/partial/flot.html
+++ b/partial/flot.html
@@ -14,7 +14,7 @@
             <!-- /.panel-heading -->
             <div class="panel-body">
                 <div class="flot-chart">
-                    <div class="flot-chart-content" id="flot-line-chart"></div>
+                    <sb-flot-line-chart></sb-flot-line-chart>
                 </div>
             </div>
             <!-- /.panel-body -->
