Add flot examples, part 2.

--- a/partial/flot.html
+++ b/partial/flot.html
@@ -30,7 +30,7 @@
             <!-- /.panel-heading -->
             <div class="panel-body">
                 <div class="flot-chart">
-                    <div class="flot-chart-content" id="flot-pie-chart"></div>
+                    <sb-flot-pie-chart></sb-flot-pie-chart>
                 </div>
             </div>
             <!-- /.panel-body -->
