--- a/partial/flot.html
+++ b/partial/flot.html
@@ -46,7 +46,7 @@
             <!-- /.panel-heading -->
             <div class="panel-body">
                 <div class="flot-chart">
-                    <div class="flot-chart-content" id="flot-line-chart-multi"></div>
+                    <sb-flot-multiple-axes-line-chart></sb-flot-multiple-axes-line-chart>
                 </div>
             </div>
             <!-- /.panel-body -->
