Add flot examples, part 4.

--- a/partial/flot.html
+++ b/partial/flot.html
@@ -62,7 +62,7 @@
             <!-- /.panel-heading -->
             <div class="panel-body">
                 <div class="flot-chart">
-                    <div class="flot-chart-content" id="flot-line-chart-moving"></div>
+                    <sb-flot-moving-line-chart></sb-flot-moving-line-chart>
                 </div>
             </div>
             <!-- /.panel-body -->
@@ -78,7 +78,7 @@
             <!-- /.panel-heading -->
             <div class="panel-body">
                 <div class="flot-chart">
-                    <div class="flot-chart-content" id="flot-bar-chart"></div>
+                    <sb-flot-bar-chart></sb-flot-bar-chart>
                 </div>
             </div>
             <!-- /.panel-body -->
