Add tooltip and popover directives.

--- a/partial/notifications.html
+++ b/partial/notifications.html
@@ -109,7 +109,7 @@
             <!-- /.panel-heading -->
             <div class="panel-body">
                 <h4>Tooltip Demo</h4>
-                <div class="tooltip-demo">
+                <div class="tooltip-demo" sb-tooltip>
                     <button type="button" class="btn btn-default" data-toggle="tooltip" data-placement="left" title="Tooltip on left">Tooltip on left</button>
                     <button type="button" class="btn btn-default" data-toggle="tooltip" data-placement="top" title="Tooltip on top">Tooltip on top</button>
                     <button type="button" class="btn btn-default" data-toggle="tooltip" data-placement="bottom" title="Tooltip on bottom">Tooltip on bottom</button>
@@ -117,7 +117,7 @@
                 </div>
                 <br>
                 <h4>Clickable Popover Demo</h4>
-                <div class="tooltip-demo">
+                <div class="tooltip-demo" sb-popover>
                     <button type="button" class="btn btn-default" data-container="body" data-toggle="popover" data-placement="left" data-content="Vivamus sagittis lacus vel augue laoreet rutrum faucibus.">
                         Popover on left
                     </button>
