--- a/partial/layouts/sidebar.html
+++ b/partial/layouts/sidebar.html
@@ -1,6 +1,6 @@
 <nav class="navbar-default navbar-static-side" role="navigation">
     <div class="sidebar-collapse">
-        <ul class="nav" id="side-menu" sb-sidebar-menus>
+        <ul class="nav" id="side-menu" sb-sidebar-menus menus-url="/examples/json/menus.json">
             <li class="sidebar-search">
                 <sb-sidebar-search></sb-sidebar-search>
             </li>
