Replace "messages-url" with "from".

--- a/partial/layouts/top-nav.html
+++ b/partial/layouts/top-nav.html
@@ -15,7 +15,7 @@
             <a class="dropdown-toggle" data-toggle="dropdown" href="#">
                 <i class="fa fa-envelope fa-fw"></i>  <i class="fa fa-caret-down"></i>
             </a>
-            <sb-top-nav-messages messages-url="/examples/json/messages.json"></sb-top-nav-messages>
+            <sb-top-nav-messages from="/examples/json/messages.json"></sb-top-nav-messages>
         </li>
         <li class="dropdown">
             <a class="dropdown-toggle" data-toggle="dropdown" href="#">
