--- a/partial/layouts/top-nav-tasks.html
+++ b/partial/layouts/top-nav-tasks.html
@@ -1,68 +1,20 @@
 <ul class="dropdown-menu dropdown-tasks">
-    <li>
+    <li ng-repeat-start="task in tasks">
         <a href="#">
             <div>
                 <p>
-                    <strong>Task 1</strong>
-                    <span class="pull-right text-muted">40% Complete</span>
+                    <strong>{{ task.name }}</strong>
+                    <span class="pull-right text-muted">{{ task.now }}% Complete</span>
                 </p>
                 <div class="progress progress-striped active">
-                    <div class="progress-bar progress-bar-success" role="progressbar" aria-valuenow="40" aria-valuemin="0" aria-valuemax="100" style="width: 40%">
-                        <span class="sr-only">40% Complete (success)</span>
+                    <div class="progress-bar progress-bar-{{ task.status }}" role="progressbar" aria-valuenow="{{ task.now }}" aria-valuemin="{{ task.min }}" aria-valuemax="{{ task.max }}" style="width: {{ task.now }}%">
+                        <span class="sr-only">40% Complete ({{ task.status }})</span>
                     </div>
                 </div>
             </div>
         </a>
     </li>
-    <li class="divider"></li>
-    <li>
-        <a href="#">
-            <div>
-                <p>
-                    <strong>Task 2</strong>
-                    <span class="pull-right text-muted">20% Complete</span>
-                </p>
-                <div class="progress progress-striped active">
-                    <div class="progress-bar progress-bar-info" role="progressbar" aria-valuenow="20" aria-valuemin="0" aria-valuemax="100" style="width: 20%">
-                        <span class="sr-only">20% Complete</span>
-                    </div>
-                </div>
-            </div>
-        </a>
-    </li>
-    <li class="divider"></li>
-    <li>
-        <a href="#">
-            <div>
-                <p>
-                    <strong>Task 3</strong>
-                    <span class="pull-right text-muted">60% Complete</span>
-                </p>
-                <div class="progress progress-striped active">
-                    <div class="progress-bar progress-bar-warning" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 60%">
-                        <span class="sr-only">60% Complete (warning)</span>
-                    </div>
-                </div>
-            </div>
-        </a>
-    </li>
-    <li class="divider"></li>
-    <li>
-        <a href="#">
-            <div>
-                <p>
-                    <strong>Task 4</strong>
-                    <span class="pull-right text-muted">80% Complete</span>
-                </p>
-                <div class="progress progress-striped active">
-                    <div class="progress-bar progress-bar-danger" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100" style="width: 80%">
-                        <span class="sr-only">80% Complete (danger)</span>
-                    </div>
-                </div>
-            </div>
-        </a>
-    </li>
-    <li class="divider"></li>
+    <li class="divider" ng-repeat-end></li>
     <li>
         <a class="text-center" href="#">
             <strong>See All Tasks</strong>
