--- a/partial/layouts/top-nav.html
+++ b/partial/layouts/top-nav.html
@@ -21,13 +21,13 @@
             <a class="dropdown-toggle" data-toggle="dropdown" href="#">
                 <i class="fa fa-tasks fa-fw"></i>  <i class="fa fa-caret-down"></i>
             </a>
-            <sb-top-nav-tasks></sb-top-nav-tasks>
+            <sb-top-nav-tasks from="/examples/json/tasks.json"></sb-top-nav-tasks>
         </li>
         <li class="dropdown">
             <a class="dropdown-toggle" data-toggle="dropdown" href="#">
                 <i class="fa fa-bell fa-fw"></i>  <i class="fa fa-caret-down"></i>
             </a>
-            <sb-top-nav-alerts></sb-top-nav-alerts>
+            <sb-top-nav-alerts from="/examples/json/alerts.json"></sb-top-nav-alerts>
         </li>
         <li class="dropdown">
             <a class="dropdown-toggle" data-toggle="dropdown" href="#">
